--- a/pom.xml
+++ b/pom.xml
@@ -19,14 +19,12 @@
 	<dependencies>
 		<dependency>
 			<groupId>org.springframework.boot</groupId>
-			<artifactId>spring-boot-starter-web</artifactId>
+			<artifactId>spring-boot-starter-thymeleaf</artifactId>
 		</dependency>
 		<dependency>
-	        <groupId>org.junit.jupiter</groupId>
-	        <artifactId>junit-jupiter-engine</artifactId>
-	        <version>5.5.2</version>
-	    </dependency>
-
+			<groupId>org.springframework.boot</groupId>
+			<artifactId>spring-boot-starter-web</artifactId>
+		</dependency>
 		<dependency>
 			<groupId>org.springframework.boot</groupId>
 			<artifactId>spring-boot-starter-test</artifactId>
@@ -34,41 +32,13 @@
 		</dependency>
 	</dependencies>
 
-	<build>
+
+		<build>
 		<plugins>
 			<plugin>
 				<groupId>org.springframework.boot</groupId>
 				<artifactId>spring-boot-maven-plugin</artifactId>
 			</plugin>
-			
-			<plugin>
-	          <groupId>org.apache.maven.plugins</groupId>
-	          <artifactId>maven-surefire-plugin</artifactId>
-	          <version>2.22.2</version>
-        	</plugin>
-        	<plugin>
-	            <groupId>org.apache.maven.plugins</groupId>
-	            <artifactId>maven-surefire-plugin</artifactId>
-	            <version>3.0.0-M5</version>
-	            <dependencies>
-	                <dependency>
-	                    <groupId>org.junit.jupiter</groupId>
-	                    <artifactId>junit-jupiter-engine</artifactId>
-	                    <version>5.5.2</version>
-	                </dependency>
-	            </dependencies>
-	        </plugin>
-	        
-	        <plugin> 
-			  <groupId>com.microsoft.azure</groupId>  
-			  <artifactId>azure-webapp-maven-plugin</artifactId>  
-			  <version>2.2.0</version>  
-			  <configuration>
-			    <resourceGroup>Stellarmax-group</resourceGroup>
-			    <appName>Stellarmax-prototype</appName>
-			    <pricingTier>Free</pricingTier>
-			  </configuration>
-			</plugin> 
 		</plugins>
 	</build>
 
