--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,6 @@
+spring.datasource.url=jdbc:mysql://localhost:3306/codejavadb
+spring.datasource.username=stellarmaxroot
+spring.datasource.password=S332905868@ocdsb
 
+spring.jpa.hibernate.ddl-auto=none
+spring.jpa.properties.hibernate.format_sql=true
