configuring for azure sql

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,9 +1,9 @@
-spring.datasource.url=jdbc:mysql://localhost:3306/codejavadb
-spring.datasource.username=root
-spring.datasource.password=S332905868
-
-spring.jpa.hibernate.ddl-auto=none
-spring.jpa.properties.hibernate.format_sql=true
+#spring.datasource.url=jdbc:mysql://localhost:3306/codejavadb
+#spring.datasource.username=root
+#spring.datasource.password=S332905868
+#
+#spring.jpa.hibernate.ddl-auto=none
+#spring.jpa.properties.hibernate.format_sql=true
 
 
 spring.servlet.multipart.max-file-size=10MB
