--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -1,15 +1,15 @@
-#spring:
-#  datasource:
-#    url: jdbc:sqlserver://stellarmax.database.windows.net:1433;database=stellarmaxdb;user=stellarmax@stellarmax;password={your_password_here};encrypt=true;trustServerCertificate=false;hostNameInCertificate=*.database.windows.net;loginTimeout=30;
-#    username: stellarmax
-#    password: password@123
-#    
-#  jpa:
-#    show-sql: true
-#    hibernate:
-#      ddl-auto: update
-#      dialect: org.hibernate.dialect.SQLServer2012Dialect
-#      
-#server:
-#    port: 9191
-#    
+spring:
+  datasource:
+    url: jdbc:sqlserver://stellarmax.database.windows.net:1433;database=stellarmaxdb;user=stellarmax@stellarmax;password={your_password_here};encrypt=true;trustServerCertificate=false;hostNameInCertificate=*.database.windows.net;loginTimeout=30;
+    username: stellarmax
+    password: password@123
+    
+  jpa:
+    show-sql: true
+    hibernate:
+      ddl-auto: update
+      dialect: org.hibernate.dialect.SQLServer2012Dialect
+      
+server:
+    port: 9191
+    
